# Perplex

./: .gitignore  Cargo.toml  README.md
src/: analysis.rs  colors.rs  llamacpp.rs  main.rs  settings.rs  ui.rs  ui_main.rs  ui_settings.rs  ui_tokens.rs  utils.rs  worker.rs
