[package]
name = "perplex"
version = "0.1.0"
edition = "2021"
description = "A desktop GUI application for analyzing text perplexity using local LLMs"
authors = ["Belluxx"]

[dependencies]
eframe = "0.30"
egui = "0.30"
llama-cpp-2 = "0.1"
rfd = "0.15"
log = "0.4"
env_logger = "0.11"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
